JG-2002-01-20-0  Bugfix:    qsub -C "" (do not parse special comments in script 
                            file) did not work.
                 IZ:        #449
                 Bugtraq:   #4802831

SD-2002-12-19-1  Enhancem.  A new qmaster_params attribute called
                            SCHEDULER_TIMEOUT will allow the scheduler GDI event
                            acknowledge timeout (default is 10 minutes) to be
                            configured to a specific value. I have also added
                            GEEE profiling information which reports the number
                            of seconds required for specific parts of GEEE
                            scheduling (pending job ticket calculation, job
                            sorting, active job ticket calculation, and job
                            placement). These changes will provide additional
                            feedback for further reducing job scheduling
                            overhead and improving scheduler scalability.

JG-2002-12-19-0  Bugfix:    Wrong error output if a userlist shall be deleted
                            that is still referenced in an execution host.

AH-2002-12-12-0  Bugfix:    conflicting policies can cause job being started and
                            immediately suspended
                 IZ:        #437
                 Bugtraq:   #4790592 
                 Bugfix     failover to shadow master leaves sge_schedd on the  
                            original qmaster host
                 IZ:        #441
                 Bugtraq:   #4787623 
                 Review:    AS

AH-2002-12-11-0  Bugfix:    job arguments larger than 10k crash qmaster
                 IZ:        #440
                 Bugtraq:   #4792036
                 Review:    AS
            
JG-2002-12-11-0  Enhancem.  Improved performance / scalability for job submit.

EB-2002-12-10-0  Bugfix:    job logging file exists but is empty in certain 