@@ -1,3 +1,10 @@
+EB-2003-01-23-0  Bugfix:    qalter shows wrong priority number when using
+                            negative priorities with -p option
+                 IZ:        #403
+                 Bugtraq:   #4769608
+                 Review:    CR
+                 Changed:   sge_qmaster
+
 JG-2002-01-20-0  Bugfix:    qsub -C "" (do not parse special comments in script 
                             file) did not work.
                  IZ:        #449
@@ -68,6 +75,7 @@ CR-2002-11-28-0  Cleanup:   un-commented message macros not used in source code
 
 EB-2002-11-25-2  Bugfix:    qstat -f output broken for pe jobs on same queue
                  IZ:        #430
+                 Bugtraq:   #4795475
                  Review:    CR
 
 EB-2002-11-25-1  Testsuite: Added new tests which will find bug #126
